fix alignment

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -215,4 +215,5 @@ html {
 
 .hover-bg-secondary:hover{
   background: gray;
+  color: white !important;  
 }
